# CraftPlanner

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
docs/apps-script/: CraftPlanSync.gs
docs/superpowers/plans/: 2026-06-09-craftplan.md  2026-06-09-online-db-sync.md  2026-06-10-sheet-image-sync-and-craftplanner-rename.md
docs/superpowers/specs/: 2026-06-09-craftplan-design.md  2026-06-09-online-db-sync-design.md  2026-06-10-sheet-image-sync-and-craftplanner-rename-design.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  portable_data.rs  sync.rs
src/components/: ItemBadge.tsx  Layout.tsx  Modal.tsx  PermissionError.tsx  SearchSelect.tsx  Sidebar.tsx  TopBar.tsx  ui.tsx
src/domain/: calculation.ts  defaultData.ts  ids.ts  importExport.ts  quantity.ts  sampleData.ts  sync.ts  types.ts  validation.ts
src/screens/: Calculator.tsx  Dashboard.tsx  ImportExport.tsx  Inventory.tsx  Items.tsx  Recipes.tsx  Settings.tsx
src/store/: useCraftPlanStore.ts
src/tauri/: api.ts
src/tests/: calculation.test.ts  egoGiftData.test.ts  importExport.test.ts  quantity.test.ts  sync.test.ts  validation.test.ts
test-data/: ego-gift-craftplan-data.json
