[package]
name = "craftplan"
version = "1.0.0"
description = "CraftPlan desktop crafting planner"
authors = ["CraftPlan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
